app/styles/views/teams/team/_project.scss
$team-project-progress-bar-height: rem-calc(4);
$team-project-header-title-height: rem-calc(90);
$team-project-header-stats-height: $team-project-header-title-height / 2;
$team-project-header-height:
  $team-project-progress-bar-height +
  $team-project-header-title-height +
  $team-project-header-stats-height +
  $side-panel-actions-height;

.side-panel.project {
  > div {
    overflow-y: visible;
  }

  .progress-bar {
    height: $team-project-progress-bar-height;
  }

  header {
    box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, .075);
    float: left;
    position: relative;
    width: 100%;
    z-index: 1;

    > .content {
      @extend %grid-column-12;

      line-height: $team-project-header-title-height;
      padding: 0 $column-gutter;

      .info {
        @extend %grid-column-medium-10;
        @extend %grid-column-small-9;

        padding: 0 !important;
        white-space: nowrap;
      }
    }

    h1,
    .priority-select,
    .lead {
      display: inline-block;
      vertical-align: middle;
    }

    h1 {
      margin: 0;
      padding: 0;
      width: 100%;

      span {
        float: left;
        max-width: 80%;
        overflow: hidden;
        padding-left: $column-gutter / 2;
        text-overflow: ellipsis;
        white-space: nowrap;
      }

      small {
        padding-left: $column-gutter / 2;
      }

      @media #{$small-only} {
        padding: 0;

        span,
        small {
          padding-left: 0;
        }
      }

      @media #{$medium-only} {
        max-width: 85%;

        span {
          max-width: 75%;
        }
      }
    }

    .pistachio-link i {
      @include icon(external-link);

      font-size: $base-font-size;
      margin-left: $column-gutter / 2;
      vertical-align: middle;
    }

    .lead {
      @extend %grid-column-medium-2;
      @extend %grid-column-small-3;

      float: none;
      margin: 0;
      padding: 0 !important;
      text-align: right;
    }

    .stats {
      @extend %grid-column-12;

      border-top: 1px solid $global-section-border-color;
      padding: 0 !important;
      text-align: center;

      > ul {
        @extend %grid-column-12;

        color: $small-font-color;
        font-size: $small-font-size;
        margin-bottom: 0;
        padding: 0 $column-gutter / 2;
        text-transform: uppercase;

        li {
          @extend %grid-column-3;

          line-height: $team-project-header-stats-height;
          padding: 0 !important;
          white-space: nowrap;

          &:first-child {
            font-weight: $font-weight-extrabold;
            padding-left: 0;
            text-align: left;
          }

          &:last-child {
            font-weight: $font-weight-extrabold;
            text-align: right;
          }
        }

        .count {
          font-weight: $font-weight-bold;
          padding-left: $column-gutter / 2;
        }
      }
    }
  }

  .priority-select {
    .dropdown > button {
      margin: 0;
    }

    @media #{$small-only} {
      display: none !important;
    }
  }

  .angles {
    bottom: 0;
    left: 0;
    overflow-y: auto;
    position: absolute;
    right: 0;
    top: $team-project-header-height;

    > ul {
      padding: 0;

      > li {
        &:last-child > article {
          border-bottom: 1px solid $panel-border-color;
        }

        > article {
          @extend %grid-row;
          @include clearfix();

          background-color: $panel-bg;
          border-top: 1px solid $panel-border-color;
          padding: $column-gutter/2 $column-gutter;

          .title {
            font-size: $h3-font-size;
            font-weight: $font-weight-normal;
            padding-bottom: $column-gutter/ 2;
          }

          > ul {
            @extend %grid-column-10;

            padding: 0;
            position: relative;
          }
        }
      }
    }
  }
}

